<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gb_w"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/err_motor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:padding="10.0dip"
            android:text="@string/err_motor"
            android:textColor="@color/color_filter_warn_text"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/color_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/err_air_sensor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:padding="10.0dip"
            android:text="@string/err_air_sensor"
            android:textColor="@color/color_filter_warn_text"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/color_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:padding="10.0dip"
            android:text="@string/call_server"
            android:textColor="@color/color_green"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@color/color_gray" />
    </LinearLayout>

</LinearLayout>