<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffe5e5e5"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:paddingTop="10.0dip">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/wind"
        android:textColor="#ff333333"
        android:textSize="18.0sp" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="15.0dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0.5dip"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/wind_1"
                    android:layout_width="9.0dip"
                    android:layout_height="9.0dip"
                    android:button="@drawable/point_check_box" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/wind_2"
                    android:layout_width="9.0dip"
                    android:layout_height="9.0dip"
                    android:button="@drawable/point_check_box" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/wind_3"
                    android:layout_width="9.0dip"
                    android:layout_height="9.0dip"
                    android:button="@drawable/point_check_box" />
            </FrameLayout>
            
             <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/wind_4"
                    android:layout_width="9.0dip"
                    android:layout_height="9.0dip"
                    android:button="@drawable/point_check_box" />
            </FrameLayout>
            

            <CheckBox
                android:id="@+id/wind_5"
                android:layout_width="9.0dip"
                android:layout_height="9.0dip"
                android:layout_weight="0.0"
                android:button="@drawable/point_check_box" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/wind_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxHeight="2.0dip"
            android:progressDrawable="@drawable/seek_img"
            android:thumb="@drawable/thumb" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="20.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="5.0dip"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_1"
                android:textColor="@color/color_gray"
                android:textSize="16.0sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_2"
                android:textColor="@color/color_gray"
                android:textSize="16.0sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_3"
                android:textColor="@color/color_gray"
                android:textSize="16.0sp" />
        </FrameLayout>
        
         <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_4"
                android:textColor="@color/color_gray"
                android:textSize="16.0sp" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:text="@string/wind_5"
            android:textColor="@color/color_gray"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>