<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gb_w"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="@color/color_green" >

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="50.0dip"
            android:layout_height="45.0dip"
            android:background="@null"
            android:src="@drawable/return1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60.0dip"
            android:layout_marginRight="60.0dip"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/filter_case"
            android:textColor="#ffffffff"
            android:textSize="21.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_time"
            android:textColor="#ff666666"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/delay_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text="1415小时"
            android:textColor="@color/color_filter_text"
            android:textSize="36.0sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/color_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/net"
            android:textColor="#ff666666"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text=""
            android:textColor="@color/color_filter_text"
            android:textSize="16.0sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/color_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10.0dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#ff666666"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/server_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:text=""
            android:textColor="@color/color_filter_text"
            android:textSize="16.0sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/color_gray" />

</LinearLayout>